flapivor/tests/m3/hopix/typechecker/good/48-pattern-matching-12.hopix
val x : Int = case 3 { 0 => 1 | (_ : Int) => 0 }