flapivor/tests/m3/hopix/typechecker/bad/74-while-02.hopix
val main : Unit = while (0) { nothing }